emploi du temps fait

--- a/content/practicals/_index.html
+++ b/content/practicals/_index.html
@@ -13,7 +13,7 @@ weight: 1
 
 <div id="présentation" class="section level2">
 <h2>Présentation</h2>
-<p>Cette page contient les travaux pratiques sous <i class="fab  fa-r-project " style="color:#0085d6;"></i> illustrant les concept du <a href="/cours/">cours</a>.</p>
+<p>Cette page contient les travaux pratiques sous <i class="fab  fa-r-project " style="color:#0085d6;"></i> illustrant les concepts du <a href="/cours/">cours</a>.</p>
 <!--
 ## Solutions
 Les **réponses et solutions** pour les sept exercises de travaux pratiques de ce cours sont affichés ci-dessous et peuvent être téléchargés [ici](/files/PracticalsSolutions.pdf).
