--- a/content/schedule/index.html
+++ b/content/schedule/index.html
@@ -1,16 +1,23 @@
 ---
-title: "Schedule"
+title: "Organisation du cours"
 slug: schedule
 ---
 
 
 
-<p>This online class will span over 3 consecutive Thursdays. This schedule is intended to give you enough time to complete.</p>
+<p>Dû au format distanciel actuel, nous allons adopté une organisation de “classe inversée” pour ce cours.</p>
+<div id="plan-du-site" class="section level2">
+<h2>Plan du site</h2>
 <ul>
-<li><a href="/lectures/"><strong>Lectures</strong></a> <i class="fas fa-book-reader"></i> <i class="fas fa-chalkboard-teacher"></i> : this page contains the recorded lecture videos, the lecture notes and the slides for this class.</li>
-<li><a href="/practicals/"><strong>Practicals</strong></a> <i class="fas fa-laptop-code"></i> : this page contains the practicals code exercise corresponding to the topics covered each of the 3 days.</li>
+<li><a href="/cours/"><strong>Cours</strong></a> <i class="fas fa-book-reader"></i> : cette page contient le support écrit du cours.</li>
+<li><a href="/lectures/"><strong>Leçons</strong></a> <i class="fas fa-chalkboard-teacher"></i> : cette page contiens des leçons vidéos et les diaporamas présentant les concepts du cours.</li>
+<li><a href="/TD/"><strong>Travaux dirigés</strong></a> <i class="fas fa-pencil-alt"></i> : cette page contient des exercices à réaliser à la main pour s’approprier les concepts du cours.</li>
+<li><a href="/practicals/"><strong>Travaux pratiques</strong></a> <i class="fas fa-laptop-code"></i> : cette page contient des exercices logiciels à réaliser sous <code>R</code> avec <code>JAGS</code>.</li>
+<li><a href="/projet/"><strong>Evaluation</strong></a> <i class="fas fa-user-graduate"></i> : cette page contient des exercices logiciels à réaliser sous <code>R</code> avec <code>JAGS</code>.</li>
 </ul>
-<p>On <em>Tuesday June 23 3pm</em>, I ask that you <strong>send me your attempt at solving the practicals</strong> by <a href="mailto::boris.hejblum@u-bordeaux.fr">email</a> – <em>before 3pm</em>. Thus, I will be able to assess your progress, and focus the live sessions on day 3 on the potential difficulties you encountered previously.</p>
+</div>
+<div id="emploi-du-temps" class="section level2">
+<h2>Emploi du temps</h2>
 <hr />
 <table>
 <colgroup>
@@ -22,174 +29,151 @@ slug: schedule
 <thead>
 <tr class="header">
 <th align="left"><strong>Date</strong></th>
-<th align="left"><strong>Time</strong></th>
-<th align="left"><strong>Activity</strong></th>
-<th align="left"><strong>Topic</strong></th>
+<th align="left"><strong>Heure</strong></th>
+<th align="left"><strong>Activité</strong></th>
+<th align="left"><strong>Sujet</strong></th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left"><strong>June 11</strong></td>
-<td align="left">8:15am-10:15am</td>
-<td align="left">🎬 🍿 📖 Watch lectures &amp; read lecture notes</td>
-<td align="left">Part I: Intro to Bayesian stats</td>
+<td align="left"><strong>Lundi 30 novembre</strong></td>
+<td align="left">14h-17h</td>
+<td align="left">📹 👨‍💻 Présentation du cours</td>
+<td align="left">Chapitre I</td>
 </tr>
 <tr class="even">
-<td align="left"></td>
-<td align="left">10:15am-10:30am</td>
-<td align="left">⏸ Break</td>
-<td align="left"></td>
+<td align="left"><strong>Mardi 1er décembre</strong></td>
+<td align="left">14h-16h</td>
+<td align="left">🎬 🍿 📖 Visionnage des vidéos et lectures des notes en autonomie</td>
+<td align="left">Chapitres I &amp; II</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">10:30am-11:30am</td>
-<td align="left">📹 👨‍💻 ❓ Live zoom Q&amp;A</td>
-<td align="left">Questions &amp; explanations about part I</td>
+<td align="left">16h15-17h</td>
+<td align="left">📹 👨‍💻 ❓ Zoom questions-réponses</td>
+<td align="left">Chapitres I &amp; II</td>
 </tr>
 <tr class="even">
-<td align="left"></td>
-<td align="left">11:30am-12:15pm</td>
-<td align="left">🥪 Lunch break</td>
-<td align="left"></td>
+<td align="left"><strong>Mercredi 2 décembre</strong></td>
+<td align="left">9h-9h45</td>
+<td align="left">📜 🖊 TD en autonomie</td>
+<td align="left">Exercice 1</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">12:15pm-1:15pm</td>
-<td align="left">🎬 🍿 📖 Watch lectures &amp; read lecture notes</td>
-<td align="left">Part II: Bayesian computation (intro)</td>
+<td align="left">10h-10h30</td>
+<td align="left">📹 👨‍💻 ✅ Correction sur zoom</td>
+<td align="left">Exercice 1</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">1:15pm-1:30pm</td>
-<td align="left">⏸ Break</td>
-<td align="left"></td>
+<td align="left">10h30pm- 11h15</td>
+<td align="left">📜 🖊 TD en autonomie</td>
+<td align="left">Exercice 2</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">1:30pm- 2:30pm</td>
-<td align="left">💻 Practicals on your own</td>
-<td align="left">• Exercise 1: “Monte Carlo” <br> • Exercise 2: “Inverse transform sampling”</td>
+<td align="left">11h30-12h</td>
+<td align="left">📹 👨‍💻 ✅ Correction sur zoom</td>
+<td align="left">Exercice 2</td>
+</tr>
+<tr class="even">
+<td align="left"><strong>Jeudi 3 décembre</strong></td>
+<td align="left">9h-11h</td>
+<td align="left">🎬 🍿 📖 Visionnage des vidéos et lectures des notes en autonomie</td>
+<td align="left">Chapitre III</td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left">11h15-12h</td>
+<td align="left">📹 👨‍💻 ❓ Zoom questions-réponses</td>
+<td align="left">Chapitre III</td>
+</tr>
+<tr class="even">
+<td align="left"><strong>Vendredi 4 décembre</strong></td>
+<td align="left">14h-14h45</td>
+<td align="left">📜 🖊 TD en autonomie</td>
+<td align="left">Exercice 3</td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left">15h-15h30</td>
+<td align="left">📹 👨‍💻 ✅ Correction sur zoom</td>
+<td align="left">Exercice 3</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">2:30pm-3pm</td>
-<td align="left">📹 👨‍💻 ❓ Live R coding on zoom</td>
-<td align="left"></td>
+<td align="left">15h30pm- 16h15</td>
+<td align="left">📜 🖊 TD en autonomie</td>
+<td align="left">Exercice 4</td>
 </tr>
 <tr class="odd">
-<td align="left"><strong>June 18</strong></td>
-<td align="left">8:15am-10:15am</td>
-<td align="left">🎬 🍿 📖 Watch lectures &amp; read lecture notes</td>
-<td align="left">Finish <em>Part II: Bayesian computation</em></td>
+<td align="left"></td>
+<td align="left">16h30-17h</td>
+<td align="left">📹 👨‍💻 ✅ Correction sur zoom</td>
+<td align="left">Exercice 4</td>
+</tr>
+<tr class="even">
+<td align="left"><strong>Lundi 7 décembre</strong></td>
+<td align="left">14h-17h</td>
+<td align="left">💻 📹 🗣 👥 Travaux pratiques en <em>break-out rooms</em> sur zoom</td>
+<td align="left">• Exercice 1: “Monte-Carlo” <br> • Exercice 2: “Transformée inverse” <br> • Exercice 3: “Metropolis-Hastings”</td>
+</tr>
+<tr class="odd">
+<td align="left"><strong>Mardi 8 décembre</strong></td>
+<td align="left">9h-12h</td>
+<td align="left">💻 📹 🗣 👥 Travaux pratiques en <em>break-out rooms</em> sur zoom</td>
+<td align="left">• Exercice 3: “Metropolis-Hastings” <br> • Exercice 4: “<code>BUGS</code> &amp; <code>JAGS</code>”</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">10:15am-10:30am</td>
-<td align="left">⏸ Break</td>
-<td align="left"></td>
+<td align="left">14h-16h</td>
+<td align="left">🎬 🍿 📖 Visionnage des vidéos et lectures en autonomie</td>
+<td align="left">Chapitre IV</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">10:30am-11:30am</td>
-<td align="left">📹 👨‍💻 ❓ Live zoom Q&amp;A</td>
-<td align="left">Questions &amp; explanations about the lectures in part II</td>
+<td align="left">16h15-17h</td>
+<td align="left">📹 👨‍💻 ❓ Zoom questions-réponses</td>
+<td align="left">Chapitre IV</td>
+</tr>
+<tr class="even">
+<td align="left"><strong>Mercredi 9 décembre</strong></td>
+<td align="left">9h-12h</td>
+<td align="left">💻 📹 🗣 👥 Travaux pratiques en <em>break-out rooms</em> sur zoom</td>
+<td align="left">• Exercice 5: “Post-mortem Bayes” <br> • Exercice 6: “Bayesian meta-analysis” <br> • Exercice 7: “How not to report a CRM” <br></td>
+</tr>
+<tr class="odd">
+<td align="left"><strong>Jeudi 10 décembre</strong></td>
+<td align="left">14h-14h45</td>
+<td align="left">📜 🖊 TD en autonomie</td>
+<td align="left">Exercice 3</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">11:30am-12:15pm</td>
-<td align="left">🥪 Lunch break</td>
-<td align="left"></td>
+<td align="left">15h-15h30</td>
+<td align="left">📹 👨‍💻 ✅ Correction sur zoom</td>
+<td align="left">Exercice 3</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">12:15pm- 1:30pm</td>
-<td align="left">💻 📹 Practicals on your own</td>
-<td align="left">• Exercise 3: “Metropolis-Hastings” <br> • Exercise 4: “<code>BUGS</code> &amp; <code>JAGS</code>”</td>
+<td align="left">15h30pm- 16h15</td>
+<td align="left">📜 🖊 TD en autonomie</td>
+<td align="left">Exercice 4</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">1:30pm-1:45pm</td>
-<td align="left">⏸ Break</td>
-<td align="left"></td>
+<td align="left">16h30-17h</td>
+<td align="left">📹 👨‍💻 ✅ Correction sur zoom</td>
+<td align="left">Exercice 4</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">1:45pm-3pm</td>
-<td align="left">💻 📹 🗣 👥 Practicals in break out rooms on zoom</td>
-<td align="left">• Exercise 3: “Metropolis-Hastings” <br> • Exercise 4: “<code>BUGS</code> &amp; <code>JAGS</code>”</td>
-</tr>
-<tr class="even">
-<td align="left"><strong>June 23</strong></td>
-<td align="left"><em>before 3pm</em></td>
-<td align="left">📨 <em>send in your attempt at solving practicals exercises 3 &amp; 4</em></td>
 <td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"><strong>June 25</strong></td>
-<td align="left">8:15am-8:45am</td>
-<td align="left">📹 👨‍💻 ❓ Correction of practicals 2</td>
-<td align="left">• Exercise 3: “Metropolis-Hastings” <br> • Exercise 4: “<code>BUGS</code> &amp; <code>JAGS</code>”</td>
-</tr>
-<tr class="even">
 <td align="left"></td>
-<td align="left">8:45am-9am</td>
-<td align="left">⏸ Break</td>
 <td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left">9am-10:15am</td>
-<td align="left">🎬 🍿 📖 📰 Watch lectures, read lecture notes &amp; read scientific articles</td>
-<td align="left">Part III: Applications</td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left">10:15am-10:30am</td>
-<td align="left">⏸ Break</td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left">10:30am-11:30am</td>
-<td align="left">📹 👨‍💻 ❓ Live zoom Q&amp;A</td>
-<td align="left">Questions &amp; explanations about part III</td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left">11:30am-12:15pm</td>
-<td align="left">🥪 Lunch break</td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left">12:15pm- 1pm</td>
-<td align="left">💻 📰 Practicals on your own</td>
-<td align="left">• Exercise 5: “Post-mortem Bayes” <br> • Exercise 6: “Bayesian meta-analysis” <br> • Exercise 7: “How not to report a CRM”</td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left">1pm-1:15pm</td>
-<td align="left">⏸ Break</td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left">1:15pm-2pm</td>
-<td align="left">💻 📰 📹 🗣 👥 Practicals in break out rooms on zoom</td>
-<td align="left">• Exercise 5: “Post-mortem Bayes” <br> • Exercise 6: “Bayesian meta-analysis” <br> • Exercise 7: “How not to report a CRM”</td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left">2pm-2:15pm</td>
-<td align="left">⏸ Break</td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left">2:15pm-3pm</td>
-<td align="left">📹 👨‍💻 📰 ❓ Correction of practicals 3</td>
-<td align="left">• Exercise 5: “Post-mortem Bayes” <br> • Exercise 6: “Bayesian meta-analysis” <br> • Exercise 7: “How not to report a CRM”</td>
 </tr>
 </tbody>
 </table>
 <hr />
+</div>
