--- a/content/practicals/01-piMCestimateQuestions.html
+++ b/content/practicals/01-piMCestimateQuestions.html
@@ -5,7 +5,7 @@ date: "2020-12-07"
 exo_date: "2020-12-07"
 menu:
   practicals:
-    parent: "Practicals"
+    parent: "TP"
     weight: 1
 type: docs
 output:
