--- a/content/projet/index.html
+++ b/content/projet/index.html
@@ -18,7 +18,7 @@ output:
 </ul>
 </div>
 
-<p>Vous serez évalués dans cette UE selon un rendu de projet sous forme de rapport écrit. <strong><em>Ce rapport est à rendre le vendredi 18 décembre à 23h59 au plus tard à l’adresse e-mail : <a href="mailto:boris.hejblum@u-bordeaux.fr">boris.hejblum@u-bordeaux.fr</a>, avec <a href="mailto:nancy.schneider@u-bordeaux.fr">nancy.schneider@u-bordeaux.fr</a> en cc</em></strong></p>
+<p>Vous serez évalués dans cette UE selon un rendu de projet sous forme de rapport écrit. <strong><em>Ce rapport est à rendre le vendredi 18 décembre à 23h59 au plus tard à l’adresse e-mail : <a href="mailto:boris.hejblum@u-bordeaux.fr">boris.hejblum@u-bordeaux.fr</a>, avec <a href="mailto:nancy.schneider@u-bordeaux.fr">nancy.schneider@u-bordeaux.fr</a> en <code>cc</code></em></strong></p>
 <div id="consignes" class="section level2">
 <h2>Consignes</h2>
 <ul>
