--- a/content/cours/08-inference.html
+++ b/content/cours/08-inference.html
@@ -34,8 +34,8 @@ output:
 <span class="math display">\[\begin{align*}
 \mathbb{E}_{\theta|\boldsymbol{y}}(\hat{\theta} - \theta)^2 &amp; = \mathbb{E}_{\theta|\boldsymbol{y}}(\theta-\mu_P +\mu_P -\hat{\theta})^2\\
  &amp; = \mathbb{E}_{\theta|\boldsymbol{y}}(\theta-\mu_P)^2 +\mathbb{E}_{\theta|\boldsymbol{y}}(\mu_P -\hat{\theta})^2\; ^*\\
- &amp; \geq \mathbb{E}_{\theta|\boldsymbol{y}}(\theta-\mu_P)^2\smallskip\\
- &amp; ^*\text{ car } \theta \text{est constant du point de vue fréquentiste et par linéarité de l&#39;espérance}
+ &amp; \geq \mathbb{E}_{\theta|\boldsymbol{y}}(\theta-\mu_P)^2\\
+ &amp; ^*\text{ car } \theta \text{ est constant du point de vue fréquentiste et par linéarité de l&#39;espérance}
 \end{align*}\]</span>
 <span class="math inline">\(\mu_P\)</span> minimise alors l’expression ci-dessus en annulant le deuxième terme (on remarque que l’erreur en moyenne quadratique est égale à la variance, puisque l’on s’intéressent aux estimateurs sans biais).</p>
 </div>
